<resources>
    <string name="app_name">ParkIThere</string>
    <string name="app_logo">Park IT\nhere</string>

    <string name="text_register">Rejestracja</string>
    <string name="text_login">Zaloguj</string>

    <string name="form_login">LOGIN</string>
    <string name="form_pass">Hasło</string>
    <string name="form_accept">Akceptuj</string>
    <string name="form_new_pass">Nowe hasło</string>
    <string name="form_pass_again">Powtórz hasło</string>

    <string name="menu_find_parking">Znajdź parking</string>
    <string name="menu_cars">Zarządzaj pojazdami</string>
    <string name="menu_premium">Aktywuj wersję premium</string>
    <string name="menu_back">Powrót</string>
    <string name="menu_park">Parkuj</string>
    <string name="menu_vehicle">Pojazdy</string>
    <string name="menu_parkings">Parkingi</string>


    <string name="menu_name">Nazwa</string>
    <string name="menu_km">km</string>
    <string name="menu_spots">Powrót</string>
    <string name="menu_distance_filter">Odległość</string>
    <string name="menu_city_filter">Nazwa miasta</string>
    <string name="menu_name_filter">Nazwa parkingu</string>
    <string name="menu_filter_hint">Podaj nazwę</string>
    <string name="menu_filter">Filtruj</string>

    <string name="menu_add_car">Dodaj</string>
    <string name="menu_modify_car">Modyfikuj</string>
    <string name="menu_delete_car">Usuń</string>


    <string name="settings_label_change_pass">Zmiana hasła</string>
    <string name="settings_label_newpass">Nowe hasło</string>
    <string name="settings_label_againpass">Powtórz hasło</string>

    <string name="person_name">Imię</string>
    <string name="person_surname">Nazwisko</string>
    <string name="person_email">e-mail</string>
    <string name="person_phone">Telefon</string>

    <string name="vehicle_brand">Marka</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_reg_num">Numer rej.</string>
    <string name="vehicle_fuel">Paliwo</string>

    <string name="about_author">Autor</string>
    <string name="about_author_name">Oskar Kowalik</string>
    <string name="about_contact">Kontakt</string>
    <string name="about_contact_details">235349@student.pwr.edu.pl</string>

    <string name="search_parking">Znajdź\nparking</string>
    <string name="manage_cars">Zarządzaj\npojazdami</string>
    <string name="activate_premium">Aktywuj\npremium</string>
    <string name="navigate">Nawiguj</string>

    <string name="title_activity_login">Logowanie</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="passNotEqualPass2">Wprowadzone hasła nie są identyczne</string>
    <string name="userExists">Użytkownik o podanym adresie e-mail już istnieje</string>
    <string name="login_failed">"Logowanie nieudane"</string>
    <string name="error">Wystąpił błąd. Skontaktuj sie z administratorem</string>
    <string name="reservation">Potwierdź rezerwację\nmiejsca</string>
    <string name="TAGstatus">status</string>
    <string name="TAGdisabled">disabled</string>
    <string name="your_reservation">Twoja rezerwacja</string>

</resources>
