<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:orientation="vertical"
    android:background="@drawable/alert_bump">
    <!--
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    -->
    <TextView
        android:id="@+id/parking_list_label"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"


        android:textAlignment="center"
        android:paddingTop="10dp"
        style="@style/normalButton"
        android:text="@string/menu_parkings"
        android:textColor="@color/colorFont"/>
    <Button
        android:id="@+id/filter_by_distance"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        style="@style/normalButton"
        android:text="@string/menu_distance_filter"
        android:textSize="15dp"

        android:layout_marginTop="5dp"
        android:layout_alignLeft="@id/parking_list_label"
        android:layout_below="@id/parking_list_label"

        />
    <Button
        android:id="@+id/filter_by_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        style="@style/normalButton"
        android:text="@string/menu_name_filter"
        android:textSize="15dp"

        android:layout_marginTop="5dp"

        android:layout_below="@id/parking_list_label"
        android:layout_toRightOf="@id/filter_by_distance"
        />
    <Button
        android:id="@+id/filter_by_city"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        style="@style/normalButton"
        android:text="@string/menu_city_filter"
        android:textSize="15dp"
        android:layout_marginTop="5dp"

        android:layout_below="@id/parking_list_label"
        android:layout_toRightOf="@id/filter_by_name"
        />

    <EditText
        android:id="@+id/filter_name_input"
        android:layout_width="300dp"
        android:layout_height="40dp"
        style="@style/normalButton"
        android:layout_below="@id/filter_by_name"
        android:layout_alignLeft="@id/parking_list_label"
        android:layout_marginTop="5dp"

        android:hint="@string/menu_filter_hint"
        android:textColorHint="@color/colorFont"
        android:visibility="invisible"
        android:paddingStart="5dp"
        android:enabled="false"
        />
    <Button
        android:id="@+id/accept_filter"
        android:layout_width="100dp"
        android:layout_height="25dp"
        style="@style/normalButton"
        android:text="@string/menu_filter"
        android:textSize="15dp"
        android:layout_marginTop="5dp"

        android:layout_below="@id/filter_name_input"
        android:layout_alignLeft="@id/filter_by_name"
        android:enabled="false"
        android:visibility="invisible"
        />
    <ListView
        android:id="@+id/parking_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"


        android:divider="@color/colorAccent"
        android:dividerHeight="2dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:layout_below="@id/accept_filter"
android:clickable="true"
        android:listSelector="@color/colorPrimary"

        />


</RelativeLayout>