<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/parking_pion">

    </ImageView>

    <Button
        android:id="@+id/button_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        style="@style/normalButton"

        android:layout_alignParentBottom="true"

        android:layout_marginStart="25dp"
        android:layout_marginBottom="75dp">

    </Button>
    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        style="@style/normalButton"

        android:layout_toEndOf="@id/button_register"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="10dp"
        android:layout_marginBottom="75dp">

    </Button>

    <TextView
        style="@style/nameLogoStencil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:rotation="-29"

        android:fontFamily="@font/blackops"
        android:text="@string/app_logo"
        android:textAlignment="center"
        >

    </TextView>

</RelativeLayout>